--- a/styles-1.css
+++ b/styles-1.css
@@ -1,9 +1,19 @@
+body {
+  width: 100%;
+}
+
 .hero {
   position: relative;
-  align-items: center;
+  -ms-flex-align: center;
+      align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
   align-items: center;
-  justify-content: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+      justify-content: center;
   padding: 1.15rem;
   padding-top: 74px;
   padding-bottom: 66px;
@@ -33,7 +43,8 @@
 }
 
 video[poster] {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -297,11 +308,15 @@ video[poster] {
   }
 
   .mobile-order-1 {
-    order: 1;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
   }
 
   .mobile-order-2 {
-    order: 2;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
 
   .mobile-margin-t2 {
@@ -327,4 +342,5 @@ video[poster] {
   .cover {
     display: none;
   }
-}/*# sourceMappingURL=styles-1.css.map */
+}
+/*# sourceMappingURL=styles-1.css.map */
