--- a/home-styles.scss
+++ b/home-styles.scss
@@ -129,7 +129,7 @@ footer {
     .ffd-hero-image-mobile{
         display:block;
         position: relative;
-        height: 100vh;
+        width: 100%;
         z-index: 1;
         right: 30px;
     }
