--- a/home-styles.scss
+++ b/home-styles.scss
@@ -109,13 +109,15 @@ footer {
     }
     &.m--pray-sweat-learn-change{
         position: absolute;
+        height:100vh;
         z-index: 1;
+        right:0;
+        .ffd-hero-image-mobile{
+            position: relative;
+            height:100%;
+        }
     }
-  
 }
-
-
- 
 @media only screen and (max-width:720px){
     .responsive-content {
         align-items:flex-end!important;
@@ -125,13 +127,6 @@ footer {
         position:relative;
         background-image: none; 
         }
-    }
-    .ffd-hero-image-mobile{
-        display:block;
-        position: relative;
-        width: 100%;
-        z-index: 1;
-        right: 30px;
     }
 
     .mobile-img {
