--- a/styles-1.css
+++ b/styles-1.css
@@ -79,18 +79,12 @@ video[poster] {
   margin: 0;
   text-transform: uppercase;
 }
-@media screen and (max-width: 720px) {
-  .hero-statement {
-    font-size: 3.3rem;
-  }
-}
 .hero-statement.m--line-1 {
   font-size: 2rem;
 }
 .hero-statement.m--line-2 {
   position: relative;
   font-size: 3.5rem;
-  color: #f6225c;
 }
 .hero-statement.m--line-3 {
   font-size: 2.7rem;
@@ -105,7 +99,6 @@ video[poster] {
 }
 .hero-statement.m--middle-statement {
   margin-top: 100px;
-  color: #f6225c;
   font-weight: bold;
 }
 .hero-statement.m--bottom-hero {
@@ -113,6 +106,33 @@ video[poster] {
 }
 .hero-statement.m--podcast-line-1 {
   font-size: 2rem;
+}
+@media screen and (max-width: 720px) {
+  .hero-statement {
+    font-size: 3.3rem;
+  }
+  .hero-statement.m--line-1 {
+    font-size: 3.5rem;
+  }
+  .hero-statement.m--line-2 {
+    font-size: 1.8rem;
+    line-height: 1rem;
+    left: 23px;
+  }
+  .hero-statement.m--line-3 {
+    font-size: 3.6rem;
+  }
+  .hero-statement.m--line-4 {
+    font-size: 3.6rem;
+  }
+  .hero-statement.plus {
+    font-weight: bold;
+    position: absolute;
+    left: -2%;
+    top: 10%;
+    font-size: 5rem;
+    color: green;
+  }
 }
 
 .join-now-header {
@@ -146,9 +166,9 @@ video[poster] {
   .content-panel.m--mobile-hero {
     position: relative;
     z-index: 10;
-    width: 85%;
+    width: 90%;
     padding: 20px;
-    margin: 175px 0 50px 0;
+    margin: 34% 0 0 0;
   }
 }
 .content-panel_header {
@@ -166,6 +186,11 @@ video[poster] {
 .content-panel .m--larger-panel-copy {
   font-size: 2rem;
   font-style: italic;
+}
+@media only screen and (max-width: 720px) {
+  .content-panel .m--larger-panel-copy {
+    font-size: 1.3rem;
+  }
 }
 @media only screen and (max-width: 720px) {
   .content-panel_copy.mobile {
@@ -259,6 +284,14 @@ video[poster] {
 
 .primary {
   color: #f6225c;
+}
+
+.secondary {
+  color: #555555;
+}
+
+.tertiary {
+  color: green;
 }
 
 .bg-dark {
