--- a/home-styles.scss
+++ b/home-styles.scss
@@ -84,6 +84,13 @@ footer {
    // #7eb559
    //#88c162
    //#2f3e59
+
+   &.m--btn-ghost {
+       background:none;
+       border:1px solid #555555;
+       -webkit-border: 1px solid #555555;
+
+   }
 }
 
 .mobile-img {
