--- a/styles-1.scss
+++ b/styles-1.scss
@@ -107,22 +107,22 @@ video[poster] {
          font-size:3.5rem;
         }
         &.m--line-2 {
-            font-size: 1.8rem;
-            line-height: 1rem;
-            left: 23px;
+            font-size: 2.1rem;
+            line-height: 1.5rem;
+            left: 18%;
         }
         &.m--line-3{
             font-size:3.6rem;
            }
         &.m--line-4{
-            font-size:3.6rem;
+            font-size: 2.2rem;;
            }
         &.plus {
             font-weight: bold;
             position: absolute;
-            left: -2%;
-            top: 10%;
-            font-size: 5rem;
+            left: 7%;
+            top: 18%;
+            font-size: 3rem;
             color: green;
         }
     }
