--- a/styles-1.scss
+++ b/styles-1.scss
@@ -138,20 +138,39 @@ video[poster] {
         text-transform: uppercase;
     }
     .m--line-2 {
-        font-size:1.5rem;
-        color:#cdddc2;
+        font-size: 2.7rem;
+        text-transform:uppercase;
     }
     .m--line-3 {
-        font-size:1.5rem;
-        font-weight:bold;
-
+        font-size: 1.5rem;
+        font-weight: bold;
+        color:#bae69c;
     }
     .m--line-4 {
         font-size:1rem;
-
+    }
+    .m--line-5{
+        font-size: 2rem;
+        margin: 0;
+    }
+    .m--line-6 {
+        font-size:2rem;
+        margin:0;
+    }
+    .m--line-7 {
+        font-size:2rem;
+        margin:0;
+    }
+    .m--line-8{
+        font-size: 2.5rem;
+        font-weight: bold;
+        margin: 0;
     }
 }
-
+.original-price {
+    font-size:2rem;
+    margin:0;
+}
 .content-panel{
     background-color: rgba(255,255,255,.8) ;
     margin:2rem;
