--- a/home-styles.scss
+++ b/home-styles.scss
@@ -49,6 +49,7 @@
         background-image: url("imgs/ffd.jpg");
         background-size: cover;
         background-position-y: 3%;
+        height:100vh;
     }
     @media only screen and (max-width:720px){
         background-image:none;
