--- a/home-styles.scss
+++ b/home-styles.scss
@@ -55,9 +55,6 @@
         background-image:none;
     }
 }
-
-
-
 footer {
     background:#f5f5f5;
     &.container {
@@ -82,6 +79,7 @@ footer {
 .si-button {
     width:98%;
     background: #9bc67e;
+    text-transform:uppercase;
    // #7eb559
    //#88c162
    //#2f3e59
