--- a/styles-1.css
+++ b/styles-1.css
@@ -108,15 +108,15 @@ video[poster] {
     font-size: 3.5rem;
   }
   .hero-statement.m--line-2 {
-    font-size: 2.1rem;
+    font-size: 2.2rem;
     line-height: 1.5rem;
-    left: 18%;
+    left: 15%;
   }
   .hero-statement.m--line-3 {
     font-size: 3.6rem;
   }
   .hero-statement.m--line-4 {
-    font-size: 2.2rem;
+    font-size: 3.7rem;
   }
   .hero-statement.plus {
     font-weight: bold;
@@ -153,6 +153,7 @@ video[poster] {
 .join-now-header .m--line-5 {
   font-size: 2rem;
   margin: 0;
+  font-weight: bold;
 }
 .join-now-header .m--line-6 {
   font-size: 2rem;
@@ -171,6 +172,10 @@ video[poster] {
 .original-price {
   font-size: 2rem;
   margin: 0;
+}
+
+.promo-price {
+  color: #bae69c;
 }
 
 .content-panel {
@@ -298,10 +303,6 @@ video[poster] {
   font-weight: normal;
 }
 
-.primary {
-  color: #f6225c;
-}
-
 .secondary {
   color: #555555;
 }
@@ -312,6 +313,10 @@ video[poster] {
 
 .bg-dark {
   background: #333333;
+}
+
+.lt-text {
+  color: #f1f1f1;
 }
 
 .list-style-none {
@@ -339,6 +344,10 @@ video[poster] {
 .width-95p {
   position: relative;
   width: 95%;
+}
+
+.primary {
+  color: #f6225c;
 }
 
 @media only screen and (max-width: 720px) {
