--- a/styles-1.css
+++ b/styles-1.css
@@ -4,10 +4,16 @@ body {
 
 .hero {
   position: relative;
-  align-items: center;
+  -ms-flex-align: center;
+      align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
   align-items: center;
-  justify-content: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+      justify-content: center;
   padding: 1.15rem;
   padding-top: 74px;
   padding-bottom: 66px;
@@ -37,7 +43,8 @@ body {
 }
 
 video[poster] {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -125,6 +132,28 @@ video[poster] {
     top: 18%;
     font-size: 3rem;
     color: green;
+  }
+}
+
+.ffd-page-hero-statement {
+  margin: 0;
+}
+@media screen and (max-width: 720px) {
+  .ffd-page-hero-statement.m--line-1 {
+    font-size: 1.5rem;
+  }
+  .ffd-page-hero-statement.m--line-2 {
+    font-size: 1.7rem;
+  }
+  .ffd-page-hero-statement.m--line-3 {
+    font-size: 1.7rem;
+  }
+  .ffd-page-hero-statement.m--motto {
+    font-size: 1.25rem;
+    color: green;
+  }
+  .ffd-page-hero-statement.m--statement {
+    font-size: 1rem;
   }
 }
 
@@ -366,11 +395,15 @@ video[poster] {
   }
 
   .mobile-order-1 {
-    order: 1;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
   }
 
   .mobile-order-2 {
-    order: 2;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
 
   .mobile-margin-t2 {
@@ -396,4 +429,5 @@ video[poster] {
   .cover {
     display: none;
   }
-}/*# sourceMappingURL=styles-1.css.map */
+}
+/*# sourceMappingURL=styles-1.css.map */
