--- a/styles-1.scss
+++ b/styles-1.scss
@@ -128,6 +128,28 @@ video[poster] {
     }
 }
 
+.ffd-page-hero-statement {
+    margin:0;
+    @media screen and (max-width:720px){
+        &.m--line-1{
+            font-size:1.5rem;
+        }
+        &.m--line-2 {
+            font-size:1.7rem;
+        }
+        &.m--line-3 {
+            font-size:1.7rem;
+        }
+        &.m--motto {
+            font-size:1.25rem;
+            color:green;
+        }
+        &.m--statement {
+            font-size:1rem;
+        }
+    }
+
+}
 .join-now-header {
     background:#333333;
     color:#f1f1f1;
