--- a/styles-1.css
+++ b/styles-1.css
@@ -100,7 +100,7 @@ video[poster] {
 .hero-statement.m--podcast-line-1 {
   font-size: 2rem;
 }
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 768px) {
   .hero-statement {
     font-size: 3.3rem;
   }
@@ -110,7 +110,8 @@ video[poster] {
   .hero-statement.m--line-2 {
     font-size: 2.2rem;
     line-height: 1.5rem;
-    left: 15%;
+    left: 2.3rem;
+    top: 0.2rem;
   }
   .hero-statement.m--line-3 {
     font-size: 3.6rem;
@@ -121,10 +122,10 @@ video[poster] {
   .hero-statement.plus {
     font-weight: bold;
     position: absolute;
-    left: 7%;
     top: 18%;
     font-size: 3rem;
     color: green;
+    left: 1.3rem;
   }
 }
 
@@ -183,13 +184,13 @@ video[poster] {
   margin: 2rem;
   padding: 2rem;
 }
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 769px) {
   .content-panel.m--mobile-hero {
     position: relative;
     z-index: 10;
     width: 90%;
     padding: 20px;
-    margin: 50% 0 0 0;
+    top: 20%;
   }
 }
 .content-panel_header {
