--- a/styles-1.css
+++ b/styles-1.css
@@ -4,16 +4,10 @@ body {
 
 .hero {
   position: relative;
-  -ms-flex-align: center;
-      align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-      justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 1.15rem;
   padding-top: 74px;
   padding-bottom: 66px;
@@ -43,8 +37,7 @@ body {
 }
 
 video[poster] {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -222,10 +215,8 @@ video[poster] {
   margin: 2rem;
   margin-top: 38%;
   padding: 2rem;
+  z-index: 2;
 }
-<<<<<<< HEAD
-@media only screen and (max-width: 769px) {
-=======
 @media only screen and (min-wdth: 1020px) {
   .content-panel {
     max-width: 25%;
@@ -237,7 +228,6 @@ video[poster] {
   }
 }
 @media only screen and (max-width: 720px) {
->>>>>>> 8bffc259e13598f6e2508f60c3202d7ded1aeac1
   .content-panel.m--mobile-hero {
     position: relative;
     z-index: 10;
@@ -420,15 +410,11 @@ video[poster] {
   }
 
   .mobile-order-1 {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
+    order: 1;
   }
 
   .mobile-order-2 {
-    -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2;
+    order: 2;
   }
 
   .mobile-margin-t2 {
@@ -454,5 +440,4 @@ video[poster] {
   .cover {
     display: none;
   }
-}
-/*# sourceMappingURL=styles-1.css.map */
+}/*# sourceMappingURL=styles-1.css.map */
