--- a/styles-1.css
+++ b/styles-1.css
@@ -213,7 +213,7 @@ video[poster] {
   position: relative;
   background-color: rgba(255, 255, 255, 0.8);
   margin: 2rem;
-  margin-top: 38%;
+  margin-top: 28%;
   padding: 2rem;
   z-index: 2;
 }
@@ -440,4 +440,12 @@ video[poster] {
   .cover {
     display: none;
   }
+}
+/*Mail Chimp Form*/
+#mc_embed_signup {
+  background: none !important;
+}
+
+.mc-signup-custom {
+  background: none;
 }/*# sourceMappingURL=styles-1.css.map */
