--- a/styles-1.css
+++ b/styles-1.css
@@ -4,10 +4,16 @@ body {
 
 .hero {
   position: relative;
-  align-items: center;
+  -ms-flex-align: center;
+      align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
   align-items: center;
-  justify-content: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+      justify-content: center;
   padding: 1.15rem;
   padding-top: 74px;
   padding-bottom: 66px;
@@ -37,7 +43,8 @@ body {
 }
 
 video[poster] {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -73,7 +80,7 @@ video[poster] {
   text-transform: uppercase;
 }
 .hero-statement.m--line-1 {
-  font-size: 5rem;
+  font-size: 5.2rem;
 }
 .hero-statement.plus {
   color: green;
@@ -84,8 +91,7 @@ video[poster] {
 }
 .hero-statement.m--line-2 {
   position: relative;
-  font-size: 2.9rem;
-  left: 92px;
+  font-size: 3.2rem;
 }
 .hero-statement.m--line-3 {
   font-size: 2.7rem;
@@ -118,7 +124,6 @@ video[poster] {
   .hero-statement.m--line-2 {
     font-size: 2.2rem;
     line-height: 1.5rem;
-    left: 2.3rem;
     top: 0.2rem;
   }
   .hero-statement.m--line-3 {
@@ -238,7 +243,7 @@ video[poster] {
 }
 .content-panel_header {
   font-size: 5vw;
-  color: purple;
+  color: #f6225c;
 }
 @media only screen and (max-width: 720px) {
   .content-panel_header {
@@ -352,7 +357,7 @@ video[poster] {
 }
 
 .tertiary {
-  color: green;
+  color: #2ba947;
 }
 
 .bg-dark {
@@ -394,6 +399,10 @@ video[poster] {
   color: #f6225c;
 }
 
+.bg-tertiary {
+  background: #cdddc2;
+}
+
 @media only screen and (max-width: 720px) {
   .header-container {
     position: relative;
@@ -410,11 +419,15 @@ video[poster] {
   }
 
   .mobile-order-1 {
-    order: 1;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
   }
 
   .mobile-order-2 {
-    order: 2;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
   }
 
   .mobile-margin-t2 {
@@ -448,4 +461,9 @@ video[poster] {
 
 .mc-signup-custom {
   background: none;
-}/*# sourceMappingURL=styles-1.css.map */
+}
+
+input[type=submit] {
+  font-weight: bold;
+}
+/*# sourceMappingURL=styles-1.css.map */
